--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <img class="logo" src="D:\Jobseeker\Pelatihan\05312021_DTS_FGA\Source_code\tugas_kelompok_b26\logo.png">
+                <img class="logo" src="https://raw.githubusercontent.com/fiqriflow/cek-gambar/d15e4272055ea2d4806d0943fa0958b96e648ed3/top.svg">
             </div>
             <div class="header-right">
                 <a href="#">Home</a>
