--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="header-left">
-                <img class="logo" src="https://raw.githubusercontent.com/fiqriflow/cek-gambar/d15e4272055ea2d4806d0943fa0958b96e648ed3/top.svg">
+                <img class="logo" src="https://raw.githubusercontent.com/fiqriflow/cek-gambar/main/logo.png">
             </div>
             <div class="header-right">
                 <a href="#">Home</a>
@@ -30,7 +30,7 @@
             <h1>Happy</h1>
             <h1>Cat Store!</h1>
             <div>
-                <img src="D:\Jobseeker\Pelatihan\05312021_DTS_FGA\Source_code\tugas_kelompok_b26\top.svg">
+                <img src="https://raw.githubusercontent.com/fiqriflow/cek-gambar/d15e4272055ea2d4806d0943fa0958b96e648ed3/top.svg">
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@
             </div>
             <div class="news-blok">
                 <div class="news">
-                    <img src="D:\Jobseeker\Pelatihan\05312021_DTS_FGA\Source_code\tugas_kelompok_b26\body_content.svg">
+                    <img src="https://raw.githubusercontent.com/fiqriflow/cek-gambar/ff914b72c11a6249048cfb8f260ad4498ff03c96/body_content.svg">
                 </div>
                 <div class="news">
                     <p class="text-contents-news">Kucing menjadi salah satu hewan yang banyak dipelihara oleh manusia. Mamalia karnivora ini lahir dari berbagai ras dan jenis. Beberapa jenis kucing yang populer mulai dari Persia, Turkish Angora, maine coon, Scottish fold dan lain
@@ -105,7 +105,7 @@
     <!--Footer-->
     <footer>
         <div class="container">
-            <img src="D:\Jobseeker\Pelatihan\05312021_DTS_FGA\Source_code\tugas_kelompok_b26\logo-dark.png">
+            <img src="https://raw.githubusercontent.com/fiqriflow/cek-gambar/main/logo-dark.png">
             <p>Let's adopt Cat</p>
         </div>
     </footer>
